--- a/style.css
+++ b/style.css
@@ -1,40 +1,54 @@
+*{
+	margin: 0;
+	padding: 0;
+}
+
+
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	background-color: #ffcd29;
 }
 
 .container {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 20px;
+	width: 50%;
+	position: absolute;
+    top: 42.5%;
+    left: 55%;
+    transform: translate(-50%, -50%);
+	border: black;
+	justify-content: center;
 }
 
 h1 {
-  text-align: center;
+	text-align: center;
+	font-size: 6vw;
+	position: absolute;
 }
 
 .button-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+	display: flex;
+	justify-content: right;
+	margin-right: 3vw;
 }
 
 .button-container button {
-  margin: 0 10px;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+	margin: 0 2vw;
+	margin-top: 4vw;
+	padding: 2.5vh 2.5vw;
+	font-size: 16px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
 }
 
 .button-container button.login {
-  background-color: #4CAF50;
-  color: white;
+  	background-color: #4CAF50;
+  	color: white;
 }
 
 .button-container button.signup {
-  background-color: #2196F3;
-  color: white;
+  	background-color: #2196F3;
+  	color: white;
 }
