--- a/css/style1.css
+++ b/css/style1.css
@@ -31,3 +31,40 @@ footer {
 .content{
 	margin: 1vh 1vw;
 }
+
+input[type=text], input[type=password]{
+	height: 30px;
+  	border: 2px solid black;
+  	border-radius: 4px;
+  	background-color: white;
+  	background-image: none;
+	background-size: 20px,20px;
+  	background-position: 10px;
+  	background-repeat: no-repeat;
+  	padding-left: 40px;
+}
+
+label, input{
+	display:block;
+	margin-top:10px;
+	margin-left:0px;
+}
+
+input[type=submit]{
+	transition: 0.4s ease-in-out;
+	background-color: white;
+	border: none;
+	color: black;
+	padding: 12px 40px;
+	text-decoration: none;
+	cursor: pointer;
+}
+
+input[type=submit]:hover{
+  background-color: green;
+  color: white;
+}
+
+p{
+	padding-top:1vw;
+}
