--- a/css/style2.css
+++ b/css/style2.css
@@ -3,14 +3,24 @@
 	padding: 0;
 }
 
+@font-face {
+  font-family: 'Eclectic-Font';
+  src: url('fonts/CroissantOne-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
 
 .header{
-	height: 33vw;
+	height: 30vw;
 	display: flex;
   	justify-content: center;
   	align-items: center;
 	text-align: center;
 	background-color: #ffcd29;
+}
+
+.merge{
+	height: 25vw;
+	display: flex;
+	background: linear-gradient(#ffcd29,grey);
 }
 
 body {
@@ -40,12 +50,14 @@ h1{
 /* Hide the images by default */
 .mySlides1, .mySlides2, .mySlides3 {
 	display: none;
+	opacity: 0;
+	transition: 1s;
 }
 
 .prev, .next {
   cursor: pointer;
   position: absolute;
-  top: 50%;
+  top: 6vw;
   width: auto;
   padding: 2vw;
   color: white;
@@ -68,59 +80,33 @@ img{
 	padding-left: 5vw;
 	margin-left: 1vw;
 	padding-top: 2vw;
+	filter: drop-shadow(2vw 1vw 0.5vw black);
+	transition: all .3s ease-in-out; 
 }
 
-burger{
-	position:absolute;
-	width: 10vw;
-	height: 10vw;
-	top: 0;
-	left: 0;
-	padding-left: 5vw;
-	padding-top: 2vw;
+img:hover{
+	transform: scale(1.1); 
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  	background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 3vw;
-  padding: 8px 12px;
-  position: top;
-  bottom: 8px;
-  width: 100%;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4}
-  to {opacity: 1}
+  	color: #f2f2f2;
+  	font-size: 3vw;
+  	font-family: 'Eclectic-Font';
+  	padding: 8px 12px;
+	padding-left: 5.1vw;
+  	position: top;
+  	bottom: 8px;
+  	width: 100%;
 }
 
 footer{
-	height: 10%;
 	max-width: 100vw;
 	width: 100%;
-	position: fixed;
-	bottom: 0;
-	left: 0;
 	background-color: #f2f2f2;
 }
