--- a/css/style3.css
+++ b/css/style3.css
@@ -1,40 +1,78 @@
+@font-face {
+  font-family: 'Eclectic-Font';
+  src: url('fonts/CroissantOne-Regular.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5, Opera 10+, Safari 3—5 */
+}
+
 *{
 	margin: 0;
 	padding: 0;
+	font-family: 'Eclectic-Font';
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 header{
-	height: 33vw;
+	height: 30vw;
 	display: flex;
-  	justify-content: center;
-  	align-items: center;
-	text-align: center;
 	background-color: #ffcd29;
+	justify-content: center;
+	align-items: center;
 }
 
 img{
-	max-height: 20vw;
+	width: 22vw;
+	height: 17vw;
+	filter: drop-shadow(2vw 1vw 0.5vw black);
+}
+
+.merge{
+	height: 17vw;
+	display: flex;
+	background: linear-gradient(#ffcd29,white);
+	justify-content: left;
+	align-items: start;
+}
+
+time{
+	padding-left: 2vw;
+	margin: 0;
+	font-family: 'Eclectic-Font';
 }
 
 headings1{
-	width: 100%;
+	width: 98%;
 	display: grid;
     grid-gap: 8%;
-	margin-left: 8%;
-	padding-top: 0%;
-	padding-left: 0%;
+	padding-left: 2%;
 	margin-top: 0%;
-	grid-template-columns: 18% 9% 10% 6% 4% 2% 3%;
-    grid-template-rows: 70px;
+	grid-template-columns: 21% 16% 11% 10.5% 5%;
+    grid-template-rows: 50px;
 }
 
 playlist-content{
-	width: 100%;
+	width: 98%;
 	display: grid;
-    grid-gap: 6%;
+    grid-gap: 5%;
 	padding-top: 0%;
-	margin-left: 9%;
+	padding-left: 2%;
 	margin-top: 2%;
-	grid-template-columns: 20% 10% 12% 11% 4% 5% 3%;
-    grid-template-rows: 50px;
+	grid-template-columns: 25% 8% 6% 14% 7% 3% 5%;
+    grid-template-rows: 100px;
+}
+
+p{
+	font-size: 0.9em;	
+}
+h3{
+	font-size: 1.3em;	
+}
+
+.title{
+	position: absolute;
+	width:100%
+	allign-items: center;
+	margin-bottom: 25vw;
 }
